# HRL

./: .gitignore  ATTRIB  LICENSE  README.md
Client/: frame.ts  index.css  index.html  index.js  index.ts  inventory.js  inventory.ts  level.js  level.ts  main.js  main.ts  package.json  spellbook.js  spellbook.ts  tooltip.js  tsconfig.json  typings.json  window.coffee  window.js
Server/: AbyssAeternum.cabal  BenchMain.hs  HRL.cabal  Main.hs  ascii.txt  cabal.config
Server/Abyss/: Game.hs  Item.hs  Monster.hs  Spell.hs  Stats.hs
Server/Abyss/Content/: Item.hs  Spell.hs
Server/Component/: AI.hs  Activator.hs  Modifier.hs  Name.hs
Server/Core/: BPS.hs  DijkstraMap.hs  ECS.hs  Engine.hs  FOV.hs  Monad.hs  SerialUtil.hs  Types.hs  ZArray.hs
Server/Server/: Input.hs  Save.hs
