name: HRL
version: 0.0.0.0
-- synopsis:            
-- description:         
license: MIT
license-file: ../LICENSE
author: James H. Smith
-- maintainer:          
-- copyright:           
category: Game
build-type: Simple
-- extra-source-files:  
cabal-version: >=1.24

executable HRL
  main-is: Main.hs
  -- other-modules:       
  other-extensions: LambdaCase, TypeOperators, GADTs, FlexibleContexts, TupleSections, OverloadedStrings, MultiWayIf, ExistentialQuantification, GeneralizedNewtypeDeriving, ViewPatterns
  ghc-options: -O2 -W
               -- -W -fprof-auto "-with-rtsopts=-p -s -h -i0.1"
  build-depends: QuickCheck >=2.9 && <2.10,
                 aeson >= 1.1 && <1.2,
                 array >=0.5 && <0.6,
                 base >=4.9 && <4.10,
                 bytestring >=0.10 && <0.11,
                 cereal >=0.5 && <0.6,
                 comonad >=5 && <5.1,
                 containers >=0.5 && <0.6,
                 criterion >=1.1 && <1.2,
                 data-lens >=2.11 && <2.12,
                 deepseq >= 1.4.2.0,
                 directory >=1.3 && <1.4,
                 filepath >=1.4 && <1.5,
                 free >=4.12 && <4.13,
                 heaps >=0.3 && <0.4,
                 mtl >=2.2 && <2.3,
                 network >= 2.6 && <2.7,
                 random >=1.1 && <1.2,
                 text >= 1.2 && <1.3,
                 transformers >=0.5 && <0.6,
                 vector >= 0.11.0.0,
                 zlib >=0.6 && <0.7
  -- hs-source-dirs:      
  default-language: Haskell2010

executable HRLBench
  main-is: BenchMain.hs
  -- other-modules:       
  other-extensions: LambdaCase, TypeOperators, GADTs, FlexibleContexts, TupleSections, OverloadedStrings, MultiWayIf, ExistentialQuantification, GeneralizedNewtypeDeriving, ViewPatterns
  ghc-options: -O2

               -- -W -fprof-auto "-with-rtsopts=-p -s -h -i0.1"
  build-depends: QuickCheck >=2.9 && <2.10,
                 aeson >= 1.1 && <1.2,
                 array >=0.5 && <0.6,
                 base >=4.9 && <4.10,
                 bytestring >=0.10 && <0.11,
                 cereal >=0.5 && <0.6,
                 comonad >=5 && <5.1,
                 containers >=0.5 && <0.6,
                 criterion >=1.1 && <1.2,
                 data-lens >=2.11 && <2.12,
                 deepseq >= 1.4.2.0,
                 directory >=1.3 && <1.4,
                 filepath >=1.4 && <1.5,
                 free >=4.12 && <4.13,
                 heaps >=0.3 && <0.4,
                 mtl >=2.2 && <2.3,
                 network >= 2.6 && <2.7,
                 random >=1.1 && <1.2,
                 text >= 1.2 && <1.3,
                 transformers >=0.5 && <0.6,
                 vector >= 0.11.0.0,
                 zlib >=0.6 && <0.7
  -- hs-source-dirs:      
  default-language: Haskell2010


  